spinnaker/00-halyard-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spinnaker
---
# kind: StorageClass
# apiVersion: storage.k8s.io/v1
# metadata:
  # name: fast
# provisioner: kubernetes.io/aws-ebs
# parameters:
  # type: gp2 
  # iopsPerGB: "10" 
  # fsType: ext4
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: halyard
    role: server
  name: halyard
  namespace: halyard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: halyard
        role: server
    spec:
      containers:
      - name: halyard-main
        image: vaibhavthakur/halyard:latest
        command: [ "/entrypoint.sh" ]
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: root-volume
          mountPath: /root
      volumes:
      - name: root-volume
        persistentVolumeClaim:
          claimName: halyard
