spinnaker/00-halyard-dp-svc.yaml
# modify https://github.com/Thakurvaibhav/k8s/blob/master/spinnaker-halyard/manifests/00-halyard-deployment.yaml
# https://github.com/Thakurvaibhav/k8s/blob/master/spinnaker-halyard/manifests/halyard-backup-cron.yaml

# https://github.com/Thakurvaibhav/docker-library/tree/master/halyard

apiVersion: v1
kind: Namespace
metadata:
  name: spinnaker
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: halyard
    role: server
  name: halyard
  namespace: spinnaker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: halyard
        role: server
    spec:
      containers:
      - name: halyard-main
        image: vaibhavthakur/halyard:latest
        command: [ "/entrypoint.sh" ]
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: root-volume
          mountPath: /root
      volumes:
      - name: root-volume
        persistentVolumeClaim:
          claimName: halyard

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: halyard
    role: service
  name: halyard
  namespace: spinnaker
spec:
  selector:
    app: halyard
    role: server
  ports:
  - name: http
    port: 8064
